@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2022-06-04T08:26:00Z",
+  "count" : 122,
+  "count_minmax" : [ 122, 122 ],
+  "count_decinc" : [ -0, +122 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
+}
