@@ -1,11 +1,11 @@
 {
-  "count": 4878,
-  "uniques": 16,
+  "count": 4895,
+  "uniques": 15,
   "clones": [
     {
       "timestamp": "2022-05-21T00:00:00Z",
-      "count": 293,
-      "uniques": 8
+      "count": 188,
+      "uniques": 6
     },
     {
       "timestamp": "2022-05-22T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-06-03T00:00:00Z",
       "count": 354,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2022-06-04T00:00:00Z",
+      "count": 122,
       "uniques": 2
     }
   ]
