@@ -1,3 +1,10 @@
+2022-06-04T08:26:00Z:
+* notice: last 14d: unq all: 15 4895
+* notice: prev accum: outdated-unq outdated-all / unq all: 585 24793 / 623 29671
+* notice: next accum: outdated-unq outdated-all / unq all: 585 24793 / 623 29688
+* notice: prev exec diff / last date diff / accum: unq all: +2 +122 -2 -105 / +2 +122 -0 -0 / 2 122
+* notice: removed / changed dates: [] / [2022-05-21 2022-06-04]
+
 2022-06-04T01:52:08Z:
 * notice: last 14d: unq all: 16 4878
 * notice: prev accum: outdated-unq outdated-all / unq all: 578 24436 / 621 29315
